Security Analysis API: add distributedActivePower to results
Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>